# KitchenSync

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.agents/: ai-work-policy.md  commit-policy.md  design-drift-policy.md  design-sources.md
data/: README.md
docs/: architecture-guide.md  codebase-review.md  database-v1.md  ingredient-markdown-schema.md  intended-api.md  model-data-flow.md  next-plans.md  recipe-markdown-schema.md  typescript-ui-tutorial.md  ui-architecture.md
docs/ui-plan/: README.md  components.md  flows.md  navigation.md
scratch/: README.md  batch_import_probe.py  facebook-recipe-parser-loop-plan.md  facebook-tiktok-comparison-plan.md  facebook_recipe_urls.txt  freeze_facebook_recipe_source.py  ingredient_parse_probe.py  recipe_input_probe.py  recipe_parse_probe.py  recipe_text_parser.py  run_facebook_recipe_corpus.py  run_social_recipe_corpus.py  run_social_recipe_review_canary.py  social-recipe-parser-instagram-expansion-plan.md  social-recipe-parser-scratch-loop-plan.md  social_import_probe.py  social_recipe_acquisition_failures.json  social_recipe_urls.txt
scratch/tiktok/: README.md  (+2 more)
scripts/: README.md  import_recipe_urls.py  recipe_urls.txt
tests/: test_app_database.py  test_batch_import_probe.py  test_import_recipe_urls.py  test_ingredient_parsing.py  test_markdown_persistence.py  test_models_smoke.py  test_parsing_scaffold.py  test_recipe_import_preview.py  test_recipe_import_save.py  test_recipe_input_probe.py  test_social_import_probe.py  test_social_recipe_text.py  test_web.py  test_web_parsing.py
ui/: vite.config.ts
(+168 files in other folders)
