[project]
name = "kitchensync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "ingredient-parser-nlp>=2.7.0",
    "pydantic>=2.13.4",
    "recipe-scrapers>=15.11.0",
    "uvicorn>=0.51.0",
    "yt-dlp>=2026.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitchensync"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
